tests/negative/ownership/conditional_move.tx
// Description: Conditional moves that could result in double free or use-after-free are caught
// EXPECTED: COMPILE_ERROR

class Data {
    value = 0;
}

function main() {
    let a = new Data();
    if (1 > 0) {
        let b = a; // moved conditionally
    }
    // ERROR: use after maybe_moved
    print(a.value);
}
